# ai-sales-qualification-assistant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: README.md  decision_criteria_bess.yaml
data/: README.md
data/accessories/: wireless_communication.md
data/bess_small_modular/: bess_small_modular_A.md  bess_small_modular_B.md
demo_output/: mail01_qwen15b_baseline.md  mail01_qwen3b_mvp_output.md
docs/: README.md
notebooks/: README.md
prompts/: README.md  qualification_prompt.md
queries/: README.md  client_email_01.txt  client_email_02.txt  client_email_03.txt
scripts/: README.md  extract_signals.py  rag_context_example.txt  rag_index.py  rag_query.py  rag_search.py  run_local_llm.py  run_qualification.py
tests/: README.md
